...
                        viewModel.search(query: newValue)
                    }
                } else {
                    ProgressView("Loading...")
                }
            }
            .navigationTitle("Recipes")
            .navigationDestination(for: String.self) { slug in
                RecipeDetailView(slug: slug)
            }
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    Button {
...
